# membread

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_GUIDE.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.md  HONEST_STATUS.md  PROJECT_SUMMARY.md  README.md  STATUS.md  demo.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  quickstart.sh  schema.sql  schema_connectors.sql  server.py  setup.py  test_connectors.py  test_simple.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.kiro/specs/chronos-mcp/: design.md  requirements.md  tasks.md
benchmarks/: __init__.py  run.py
browser_extension/: background.js  content_chatgpt.js  content_claude.js  content_gemini.js  content_mscopilot.js  content_perplexity.js  manifest.json  popup.html  popup.js
frontend/: .eslintrc.js  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActivityFeed.tsx  CommandPalette.tsx  Dock.tsx  EmptyState.tsx  Header.tsx  Layout.tsx  MemoryCard.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ChatPage.tsx  ConnectorsPage.tsx  DemoPage.tsx  DocsPage.tsx  EntityHistoryPage.tsx  GraphPage.tsx  HomePage.tsx  PluginsPage.tsx  SearchPage.tsx  TemporalSearchPage.tsx  TimelinePage.tsx
scripts/: agent_sdk_examples.py  generate_token.py  quick_start.sh  seed_demo.py
sdk/: README.md  pyproject.toml
sdk/membread/: __init__.py  client.py
sdk/membread/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  openai_patch.py
src/: __init__.py  api_main.py  config.py  database.py  main.py  models.py
src/api/: __init__.py  server.py
src/auth/: __init__.py  jwt_authenticator.py
src/connectors/: __init__.py  db.py  oauth.py  polling.py  webhook_manager.py
src/connectors/providers/: __init__.py  base.py  docusign.py  enterprise.py  freshdesk.py  greenhouse.py  hubspot.py  intercom.py  ipaas.py  lever.py  marketo.py  outreach.py  pagerduty.py  shopify.py  (+7 more)
src/governor/: __init__.py  conflict_resolver.py  constraint_enforcer.py  governor.py  lattice_crawler.py  provenance_tracker.py  routing_logic.py
src/mcp_server/: __init__.py  server.py
src/memory_engine/: __init__.py  graph_store.py  memory_engine.py  sql_store.py  vector_store.py
src/services/: __init__.py  circuit_breaker.py  context_compressor.py  embedding_service.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_dashboard.py  test_endpoints.py  test_graphiti_engine.py
ui/: dashboard.py
(+2 files in other folders)
