[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membread-sdk"
version = "0.2.0"
description = "Python SDK for Membread — persistent memory layer for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.30.0"]
autogen = ["pyautogen>=0.2.0"]
openai = ["openai>=1.0.0"]
all = [
    "langchain-core>=0.2.0",
    "crewai>=0.30.0",
    "pyautogen>=0.2.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["membread*"]
